--- a/TEMPLATE/Views/RecolteStation/Indexe.cshtml
+++ b/TEMPLATE/Views/RecolteStation/Indexe.cshtml
@@ -14,7 +14,7 @@
           <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
              <div>
               <h2 class="text-white pb-2 fw-bold">
-               ENREGISTREMENT DES RECOLTES DANS @Session["association"]
+                @Session["association"]
             </h2>
         </div>      
         <div class="ml-md-auto py-2 py-md-0">
@@ -22,7 +22,7 @@
          <div class="page-header">
             <ol class="breadcrumb">
                <li class="breadcrumb-item">
-                  <a href="#">Home</a>
+                  <a href="#">@Session["associat"]</a>
               </li>
               <li class="breadcrumb-item">
                 <a href="#">Recolte</a>
