--- a/TEMPLATE/Views/RecolteStation/Create.cshtml
+++ b/TEMPLATE/Views/RecolteStation/Create.cshtml
@@ -75,26 +75,26 @@
                         </div>
                       <div class="form-group">
                             <div class="col-md-12"  >
-                                <label><b style="font-size:20px">Quantite:</b></label>
-                                @Html.TextBoxFor(model => model.quantite, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.quantite)
-                            </div>
-                       </div>
-                      <div class="form-group">
-                            <div class="col-md-12"  >
                                 <label><b style="font-size:20px">Prix:</b></label>
                                 @Html.TextBoxFor(model => model.Prix, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.Prix)
                             </div>
                         </div>
-
-                     <div class="form-group">
+                      <div class="form-group">
                             <div class="col-md-12"  >
-                                <label><b style="font-size:20px">Date</b></label>
-                                @Html.TextBoxFor(model => model.Date_insertion, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.Date_insertion)
+                                <label><b style="font-size:20px">Quantite:</b></label>
+                                @Html.TextBoxFor(model => model.quantite, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.quantite)
                             </div>
-                        </div>
+                       </div>
+                      
+                      <div class="form-group">
+                          <div class="col-md-12">
+                            <label><b style="font-size:20px">Date :</b></label>
+                            <input type="Date" name="Date_insertion" class="form-control total" />
+                            
+                          </div>
+                       </div>
                        <div class="form-group">
                             <div class="col-md-offset-4 col-md-10">
                                 <input type="submit" value="Enregistrer" class="btn btn-success pull-right" />
