--- a/TEMPLATE/Views/Recolte/Index.cshtml
+++ b/TEMPLATE/Views/Recolte/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<TEMPLATE.Models.recolte>
+@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
@@ -12,7 +12,7 @@
           <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
              <div>
               <h2 class="text-white pb-2 fw-bold">
-                Recolte
+                Les recolte @ViewBag.nomprovince @ViewBag.mot
             </h2>
         </div>
         <div class="ml-md-auto py-2 py-md-0">
@@ -37,6 +37,36 @@
 </div>
 <div class="card-body rec-pat" >
   <div class="container-fluid">
+              <div class="container-fluid " >  
+                   @using (Html.BeginForm("Index", "Recolte", FormMethod.Post))
+                   {
+                      <div class="row">
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
+                                <h2 style="color:blue">Station de lavage</h2>
+                               @Html.DropDownList("station", null, "Choisir la station de lavage", htmlAttributes: new { @class = "form-control " })      
+                            </article>
+                           
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-2">
+                                <h2 style="color:blue">Afficher</h2>
+                                 <input type="submit" name="submit" value="Affiche"  class="btn btn-info"/>  
+                            </article>
+                          <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-7">
+                              <div class="row">
+                                <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                    <h2 style="color:blue">Date de début</h2>
+                                    <input type="datetime-local" name="startDate"  id="startDate" class="form-control total" />
+                                    </article>
+                                <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                    <h2 style="color:blue">Date de fin</h2>
+                                    <input type="datetime-local" name="endDate" id="endDate"  class="form-control total" /></article>
+                                <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                    <h2 style="color:blue">Voir</h2>
+                                        <input type="submit" name="submit" id="btnCreatePieChart" value="Voir"  class="btn btn-info"/>  
+                                </article>
+                              </div>
+                          </article>
+                       </div>                  
+                   }
       <a href="@Url.Action("create","recolte")" class=" btn btn-sm  btn-success pull-right  " style="margin-top:5px; margin-bottom:5px"><i class="fa fa-plus mr-2"></i>Ajouter</a>
     <div class="table-responsive">
         <table class="table table-striped  table-bordered  " id="mytable"  style="width:100%">
@@ -63,22 +93,22 @@
                     @NO 
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.client.NOM_client)
+                    @Html.DisplayFor(modelItem => item.NOM_client)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.client.PRENOM_client)
+                    @Html.DisplayFor(modelItem => item.PRENOM_client)
                 </td>
                     <td>
                     @Html.DisplayFor(modelItem => item.quantite)
                 </td>
                     <td>
-                    @Html.DisplayFor(modelItem => item.qualite.NOM_qualite)
+                    @Html.DisplayFor(modelItem => item.NOM_qualite)
                 </td>
                     <td>
                     @Html.DisplayFor(modelItem => item.Prix)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.station_lavage.NOM_station)
+                    @Html.DisplayFor(modelItem => item.NOM_station)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Date_insertion)
