--- a/TEMPLATE/Views/QualiteStation/Index.cshtml
+++ b/TEMPLATE/Views/QualiteStation/Index.cshtml
@@ -13,7 +13,7 @@
           <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
              <div>
               <h2 class="text-white pb-2 fw-bold">
-                ENREGISTREMENT DES RECOLTES DANS @Session["association"]
+                @Session["association"]
             </h2>
         </div>
         <div class="ml-md-auto py-2 py-md-0">
@@ -21,7 +21,7 @@
          <div class="page-header">
             <ol class="breadcrumb">
                <li class="breadcrumb-item">
-                  <a href="#">Home</a>
+                  <a href="#">@Session["associat"]</a>
               </li>
               <li class="breadcrumb-item">
                 <a href="#">Qualite</a>
