--- a/TEMPLATE/Views/HistoriqueUtilisateur/Index.cshtml
+++ b/TEMPLATE/Views/HistoriqueUtilisateur/Index.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@model IEnumerable<TEMPLATE.Models.historique_utilisateur>
+﻿@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
@@ -13,7 +11,7 @@
           <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
              <div>
               <h2 class="text-white pb-2 fw-bold">
-                Depense
+                Les employes inactifs  des associations et des stations de lavage 
             </h2>
         </div>
         <div class="ml-md-auto py-2 py-md-0">
@@ -21,10 +19,10 @@
          <div class="page-header">
             <ol class="breadcrumb">
                <li class="breadcrumb-item">
-                  <a href="#">Home</a>
+                  <a href="#">@ViewBag.nomprovinc</a>
               </li>
               <li class="breadcrumb-item">
-                <a href="#">Depense</a>
+                <a href="#">Les employes </a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
               Liste 
@@ -36,48 +34,216 @@
 </div>
 </div>
 </div>
+      @{
+          IEnumerable<TEMPLATE.Models.recoltModel> associations = ViewData["emp_association"] as IEnumerable<TEMPLATE.Models.recoltModel>;
+          IEnumerable<TEMPLATE.Models.recoltModel> historiques = ViewData["historique_emp"] as IEnumerable<TEMPLATE.Models.recoltModel>;
+        }
+        @{
+            List<int> IDassocition = new List<int>();
+        }
+        @foreach (TEMPLATE.Models.recoltModel iteme in historiques)
+        {
+            IDassocition.Add(iteme.ID);
+        }
+     <div class="container-fluid " >  
+                   @using (Html.BeginForm("Index", "HistoriqueUtilisateur", FormMethod.Post))
+                   {
+                      <div class="row">
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Association</h2>
+                                @Html.DropDownList("association", null, "Choisir l'association", htmlAttributes: new { @class = "form-control " })      
+                            </article>
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Afficher</h2>
+                                 <input type="submit" name="submit" value="Affiche"  class="btn btn-info"/>  
+                            </article>
+                      </div>  
+                   }
+              </div> 
+<div class="card-body rec-pat" >
+    <a href="@Url.Action("create","HistoriqueUtilisateur")" class=" btn btn-sm  btn-danger  pull-right  " style="margin-top:5px; margin-bottom:5px"><i class="fa fa-plus mr-2"></i>Désactiver</a>
+    <div style="color:blue"><h1 style="text-align:center"> @ViewBag.AS1</h1></div>
+     <div class="table-responsive">
+          <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
+               <thead>
+                   <tr style="background-color:darkturquoise">
+                        <th>NO</th>
+                        <th>ASSOCIATION</th>
+                        <th>CNI</th>
+                        <th>NOM</th>
+                        <th>PRENOM</th>
+                        <th>TEL</th>
+                        <th>EMAIL</th>
+                        <th>STATUT</th>
+                        <th>USERNAME</th>
+                        <th>PASWORD</th>
+                        <th>DATE DE DESACTIVATION</th>
+                        <th>OPTIONS</th>
+                   </tr>
+               </thead>
+               <tbody>
+                    @{ int NO=0;}
+                    @foreach (TEMPLATE.Models.recoltModel item in associations)
+                {
+                    
 
-<!-- YOUR CODE HERE
- -->            <div class="card-body rec-pat">
-             
-             
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table table-bordered table-stripped table-hover table-condensed">
+                    if (IDassocition.Contains(item.ID) == true)
+                    {
+                   
+                   
+                        NO = NO + 1;
+                        <tr>
+                            <td>
+                                @NO
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Nom_association)
+                            </td>
+                             <td>
+                                @Html.DisplayFor(modelItem => item.CNI)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NOM_employe)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.PRENOM_employe)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Tel_employe)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.EMAIL_employe)
+                            </td>
+                            <td>
+                                Inactif
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.username)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.password)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.date)
+                            </td>
+                            <td>
+                                   @Html.ActionLink("Active", "Delete", new { id = item.id }, new { @class = "btn btn-sm btn-info " })
+                                 
+                            </td>
+                        </tr>
+                    }
+                       
+                }
+              </tbody>
+        </table>
+    </div>
+  </div>
 
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ID_histoUtilisateur)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.utilisateur.username)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DATE_desactive)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ID_histoUtilisateur)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.utilisateur.username)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DATE_desactive)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
 
-</table>
+
+
+
+
+
+      @{
+          IEnumerable<TEMPLATE.Models.recoltModel> station = ViewData["emp_station"] as IEnumerable<TEMPLATE.Models.recoltModel>;
+       }
+        
+     <div class="container-fluid " >  
+                   @using (Html.BeginForm("Index", "HistoriqueUtilisateur", FormMethod.Post))
+                   {
+                      <div class="row">
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Station</h2>
+                                @Html.DropDownList("station", null, "Choisir la staion de lavage", htmlAttributes: new { @class = "form-control " })      
+                            </article>
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Afficher</h2>
+                                 <input type="submit" name="submit" value="Affiche"  class="btn btn-info"/>  
+                            </article>
+                      </div>  
+                   }
+              </div> 
+<div class="card-body rec-pat" >
+    <div style="color:blue"><h1 style="text-align:center"> @ViewBag.AS</h1></div>
+     <div class="table-responsive">
+          <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
+               <thead>
+                   <tr style="background-color:darkturquoise">
+                        <th>NO</th>
+                        <th>STATION</th>
+                        <th>CNI</th>
+                        <th>NOM</th>
+                        <th>PRENOM</th>
+                        <th>TEL</th>
+                        <th>EMAIL</th>
+                        <th>STATUT</th>
+                       <th>USERNAME</th>
+                        <th>PASWORD</th>
+                        <th>DATE DE DESACTIVATION</th>
+                        <th>OPTIONS</th>
+                   </tr>
+               </thead>
+               <tbody>
+                    @{ int NO1=0;}
+                    @foreach (TEMPLATE.Models.recoltModel item in station)
+                {
+                    
+
+                    if (IDassocition.Contains(item.ID) == true)
+                    {
+
+
+                        NO1 = NO1 + 1;
+                        <tr>
+                            <td>
+                                @NO
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Nom_association)
+                            </td>
+                             <td>
+                                @Html.DisplayFor(modelItem => item.CNI)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NOM_employe)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.PRENOM_employe)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Tel_employe)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.EMAIL_employe)
+                            </td>
+                            <td>
+                                Inactif
+                            </td>
+                             <td>
+                                @Html.DisplayFor(modelItem => item.username)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.password)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.date)
+                            </td>
+                            <td>
+                                   @Html.ActionLink("Active", "Delete", new { id = item.id }, new { @class = "btn btn-sm btn-info " })
+                                 
+                            </td>
+                        </tr>
+                    }
+                        
+                }
+              </tbody>
+        </table>
+    </div>
+  </div>
+
+
+
+
 </div>
-     </div>
