--- a/TEMPLATE/Views/EmployeAssociation/Index.cshtml
+++ b/TEMPLATE/Views/EmployeAssociation/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TEMPLATE.Models.employe_association>
+﻿@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
@@ -11,7 +11,7 @@
           <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
              <div>
               <h2 class="text-white pb-2 fw-bold">
-                Les employes des associations
+                Les employes des associations @ViewBag.nomprovince
             </h2>
         </div>
         <div class="ml-md-auto py-2 py-md-0">
@@ -19,10 +19,10 @@
          <div class="page-header">
             <ol class="breadcrumb">
                <li class="breadcrumb-item">
-                  <a href="#">Home</a>
+                  <a href="#">@ViewBag.nomprovinc</a>
               </li>
               <li class="breadcrumb-item">
-                <a href="#">Les employes des associations</a>
+                <a href="#">Les employes </a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
               Liste 
@@ -34,34 +34,55 @@
 </div>
 </div>
 </div>
+      @{
+          IEnumerable<TEMPLATE.Models.recoltModel> associations = ViewData["emp_association"] as IEnumerable<TEMPLATE.Models.recoltModel>;
+        }
+      @Html.Raw(ViewBag.Message)
+     <div class="container-fluid " >  
+                   @using (Html.BeginForm("Index", "EmployeAssociation", FormMethod.Post))
+                   {
+                      <div class="row">
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Association</h2>
+                                @Html.DropDownList("association", null, "Choisir l'association", htmlAttributes: new { @class = "form-control " })      
+                            </article>
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Afficher</h2>
+                                 <input type="submit" name="submit" value="Affiche"  class="btn btn-info"/>  
+                            </article>
+                      </div>  
+                   }
+              </div> 
 <div class="card-body rec-pat" >
-    <a href="@Url.Action("create","EmployeAssociation")" class=" btn btn-sm  btn-success pull-right  " style="margin-top:5px; margin-bottom:5px"><i class="fa fa-plus mr-2"></i>Ajouter</a>
+     <a href="@Url.Action("Indexe","EmployeAssociation")" class=" btn btn-sm  btn-outline-info pull-left  " style="margin-top:5px; margin-bottom:5px"><i class="fa fa-arrow-left mr-2"></i>Retour</a>
+    
+    <a href="@Url.Action("create","EmployeAssociation")" class=" btn btn-sm  btn-info pull-right  " style="margin-top:5px; margin-bottom:5px"><i class="fa fa-plus mr-2"></i>Ajouter</a>
      <div class="table-responsive">
           <table class="table table-striped  table-bordered  " id="mytable"  style="width:100%">
                <thead>
-                   <tr style="background-color:darkturquoise">
-                        <th>NO</th>
+                   <tr style="background-color:#016ce9">
+                       <th>NO</th>
                         <th>ASSOCIATION</th>
                         <th>CNI</th>
                         <th>NOM</th>
                         <th>PRENOM</th>
                         <th>TEL</th>
                         <th>EMAIL</th>
-                        <th>STATUT</th>
                         <th>OPTIONS</th>
                    </tr>
                </thead>
                <tbody>
                     @{ int NO=0;}
-                    @foreach (var item in Model)
-                    {
+                    @foreach (TEMPLATE.Models.recoltModel item in associations)
+                {
+
                         NO = NO + 1;
                         <tr>
                             <td>
                                 @NO
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.association.NOM_association)
+                                @Html.DisplayFor(modelItem => item.Nom_association)
                             </td>
                              <td>
                                 @Html.DisplayFor(modelItem => item.CNI)
@@ -73,28 +94,20 @@
                                 @Html.DisplayFor(modelItem => item.PRENOM_employe)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.TEL_employe)
+                                @Html.DisplayFor(modelItem => item.Tel_employe)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.EMAIL_employe)
                             </td>
+                            
                             <td>
-                                @Html.DisplayFor(modelItem => item.Statut)
-                            </td>
-                            <td>
-                            <div class="dropdown">
-                                <span class="dropdown-toggle dropdown-bg btn btn-outline-primary" role="button" id="dropdownMenuButton5"
-                                        data-toggle="dropdown" aria-expanded="false">
-                                    Actions
-                                </span>
-                                <div class="dropdown-menu dropdown-menu-right shadow-none" aria-labelledby="dropdownMenuButton5">
-                                    @Html.ActionLink("Modifier", "Edit", new { id = item.ID_employe }, new { @class = "btn btn-sm btn-success " })
-                                    @Html.ActionLink("Supprime", "Delete", new { id = item.ID_employe }, new { @class = "btn btn-sm btn-danger" })
-                                </div>
-                            </div>
+                                   @Html.ActionLink("Modifier", "Edit", new { id = item.ID }, new { @class = "btn btn-sm btn-info " })
+                                 
                             </td>
                         </tr>
                     }
+                        
+                
               </tbody>
         </table>
     </div>
