--- a/TEMPLATE/Views/EmployeAssociation/Create.cshtml
+++ b/TEMPLATE/Views/EmployeAssociation/Create.cshtml
@@ -28,78 +28,78 @@
 		    </div>
 	    </div>
     </div>
-    <div class="container-fluid" style="background-color:moccasin">
+    <div class="container-fluid" >
         <div class="row">
             <article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">     
+                <a href="@Url.Action("Index","EmployeAssociation")" class=" btn btn-sm  btn-outline-info pull-left  " style="margin-top:5px; margin-bottom:5px"><i class="fa fa-arrow-left mr-2"></i>Retour</a>
+            
             </article>
-            <article class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#D291BC;margin-top:4px;margin-bottom:4px">
+            <article class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#016ce9;margin-top:4px;margin-bottom:4px">
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
                     <div class="bg-light border  margin-top">
                     <div class="form-horizontal  "   >
-                        <h4 style="text-align:center ;color:blue">Ajouter une nouvelle employe</h4>
+                        <h4 style="text-align:center ;background-color:#016ce9;color:white">AJAUTER UN EMPLOYE</h4>
                         <hr />
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         
                         <div class="form-group">
                             <div class="col-md-12">
-                            <label> Association :</label>
-                            @Html.DropDownList("ID_association", null, "Choisir l'association", htmlAttributes: new { @class = "form-control " })
+                            <label> <b style="font-size:20px">Association :</label>
+                            @Html.DropDownList("ID_association", null, "Choisir un association", htmlAttributes: new { @class = "form-control " })
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-md-12">
-                                <label> CNI :</label>
+                                <label><b style="font-size:20px">CNI :</label>
                                 @Html.TextBoxFor(model => model.CNI, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.CNI)
                             </div>
                          </div>
                         <div class="form-group">
                             <div class="col-md-12">
-                                <label> NOM :</label>
+                                <label><b style="font-size:20px">NOM :</label>
                                 @Html.TextBoxFor(model => model.NOM_employe, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.NOM_employe)
                             </div>
                          </div>
                         <div class="form-group">
                             <div class="col-md-12">
-                                <label> PRENOM :</label>
+                                <label> <b style="font-size:20px">PRENOM :</label>
                                 @Html.TextBoxFor(model => model.PRENOM_employe, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.PRENOM_employe)
                             </div>
                          </div>
                          <div class="form-group">
                             <div class="col-md-12">
-                                <label> TEL :</label>
+                                <label> <b style="font-size:20px">TEL :</label>
                                 @Html.TextBoxFor(model => model.TEL_employe, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.TEL_employe)
                             </div>
                          </div>
                          <div class="form-group">
                             <div class="col-md-12">
-                                <label> EMAIL :</label>
+                                <label><b style="font-size:20px"> EMAIL :</label>
                                 @Html.TextBoxFor(model => model.EMAIL_employe, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.EMAIL_employe)
                             </div>
                          </div>
                         <div class="form-group">
                             <div class="col-md-12">
-                                <label> Etat :</label>
+                                <label> <b style="font-size:20px">Etat :</label>
                                 @Html.TextBoxFor(model => model.Statut, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.Statut)
                             </div>
                          </div>
                         <div class="form-group">
                             <div class="col-md-offset-4 col-md-10">
-                                <input type="submit" value="Enregistre" class="btn btn-success pull-right" />
+                                <input type="submit" value="Enregistrer" class="btn btn-info pull-right" />
                             </div>
                         </div>
                     </div>
                     </div>
-                    <div>
-                        @Html.ActionLink("Retour", "Index")
-                    </div>
+
                 }
             </article>
             <article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">    
